# experiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.cmake  experiments.cmake  figures.tex
include/: auxiliary.hpp
src/: ds-save-binary.cpp  logloss-distributed.cpp  simulator.cpp
tests/: CMakeLists.txt  figures.tex  paramserver.sh
tests/data/: datasets.lst
tests/include/: auxiliary.hpp
tests/src/: csv-splitter.cpp  logloss-distributed.cpp  logloss-shared.cpp  qp.cpp
